# agent2

./: .gitignore  README.md  agent_utils.py  chars.txt  checkpoint  config.py  debug.py  docker-compose.yml  dummy_data1.txt  dummy_data2.txt  dummy_data3.txt  experimental_insights.txt  loss_functions.py  model.py  prepare_dataset.py  pyproject.toml  run_pretraining.py  stats.py  tasks.txt  test_model.py  tests.py  tf2.py  tmp_notes.txt  train.py  transformer.py  unit_tests.py  vocab.subwords  weights.crap.data-00000-of-00001  weights.crap.index
configs/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+49 more)
datasets/: Scholar_of_Magic_3_trial.txt
datasets/2_books/: Scholar_of_Magic_2_trial.txt
datasets/dummy/: 1.txt  2.txt
datasets/no_stats_books/: Scholar_of_Magic_2_trial.txt  (+2 more)
notebook_stuff/: letter_embedding.ipynb  my_tok_test.subwords  some_docs.txt  tokenizer_test.ipynb  train_prompts87.txt
src/: checkpoints.py  commands.py  config.py  dataset.py  dataset2.py  dummy_debug.py  floating_attention.py  interface_doc.py  logger.py  model.py  pre_processing.py  profiler.py  simple_dataset.py  storage.py  tokenizer.py  train.py  transformer.py  tree_dataset.py  utils.py
tb_plugin/: .gitignore  README.md  setup.py
tests/: test_node.py  test_tree_tokenizer.py
(+204 files in other folders)
